2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/StringCmd.java (Utf8Count):
        Create Utf8Count method that accepts a single
        char argument.
        * src/jacl/tcl/lang/TclParser.java (cmdProc,
        UTF8CharPointer): Define UTF8CharPointer as
        an internal rep so that a parsed byte
        representaiton can be cached. Optimize the
        getByteInfo method so that no allocation of
        byte mapping info is done unless needed.
        Add optimized return values from helper
        functions in the case of a 1 to 1 mapping.
        These improvements significantly improve
        performance of the parse command.

2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Parser.java (grabObjv,
        releaseObjv, infiniteLoopException): Fixup
        last patch which was only half applied. Make
        grabObjv and releaseObjv package scoped so
        that they can be used in the Interp class.
        Create infiniteLoopException helper method
        to raise loop error with specific message.

2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Interp.java (eval): When
        passing a pure Tcl list to eval, skip the
        parsing step and just invoke evalObjv()
        directly. This provides a significant
        performance improvement and works like the
        C version of Tcl.
        * src/jacl/tcl/lang/Namespace.java
        (resetShadowedCmdRefs): Optimize the common
        case of a command in the global namespace
        by avoiding object allocation unless needed.
        * src/jacl/tcl/lang/Parser.java (savedVarFrame):
        Save var frame before try block and restore it
        in a finally block so that restoring works
        in the TclException case. This is needed for
        the new Interp.eval() implementation.
        * src/jacl/tcl/lang/TclList.java (index):
        Optimize the TclList.index() method so that