@@ -1,5 +1,15 @@
 2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>
 
+        * src/jacl/tcl/lang/Interp.java: Create a
+        Var[] of length 2 for so the Var.lookupVar()
+        API need not allocate a new array each time
+        it is invoked.
+        * src/jacl/tcl/lang/Var.java (lookupVar):
+        Use interp.lookupVarResult instead of
+        allocating a new array for each call.
+
+2005-11-21  Mo DeJong  <mdejong@users.sourceforge.net>
+
         * src/jacl/tcl/lang/StringCmd.java (Utf8Count):
         Create Utf8Count method that accepts a single
         char argument.
